[project]
name = "comfyui-text-to-pose"
description = "Generate human poses from text descriptions using T2P Transformer for ControlNet/T2I-Adapter workflows"
version = "1.0.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.16.0",
    "controlnet_aux>=0.0.7",
    "diffusers>=0.21.0",
    "accelerate>=0.20.0",
    "pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.urls]
Repository = "https://github.com/logicalor/comfyui_text_to_pose"
Documentation = "https://github.com/logicalor/comfyui_text_to_pose#readme"
Issues = "https://github.com/logicalor/comfyui_text_to_pose/issues"

[tool.comfy]
PublisherId = "logicalor"
DisplayName = "Text-to-Pose"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodes*"]
